--- a/_includes/manuals/3.4/1.2_release_notes.md
+++ b/_includes/manuals/3.4/1.2_release_notes.md
@@ -6,9 +6,206 @@ This section will be updated prior to the next release.
 
 ### Upgrade warnings
 
+#### Running Foreman on EL7
+
+EL7 support is dropped with Foreman 3.4. Users are advised to upgrade to EL8.
+
+Note that this support statement refers to running Foreman and Foreman Smart Proxy themselves on EL7. Managing EL7 hosts remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
+
+#### Running Foreman on Debian 10
+
+Debian 10 support is dropped with Foreman 3.4. Users are advised to upgrade to Debian 11.
+
+Note that this support statement refers to running Foreman and Foreman Proxy themselves on Debian 10. Managing Debian 10 hosts remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
+
+#### Running Foreman on Ruby 2.5
+
+With dropping the support of Debian 10 deployments in Foreman 3.2 (and the removal of support in 3.4), there is no supported platform with Ruby 2.5 anymore.
+Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch to Ruby 2.7.
+
 ### Deprecations
 
-### Release Notes
+### Release notes for 3.4.0
+#### Foreman
+* Can't assign different networks on 2+ NICs with vNIC profiles selected ([#35346](https://projects.theforeman.org/issues/35346))
+* Deprecated use of ERB.new with positional arguments ([#35298](https://projects.theforeman.org/issues/35298))
+* Ignore calico interfaces from Foreman ([#35289](https://projects.theforeman.org/issues/35289))
+* Add debugging with pry to the development setup guide    ([#35288](https://projects.theforeman.org/issues/35288))
+* Install katello-host-tools and tracer during host registration ([#35280](https://projects.theforeman.org/issues/35280))
+* SLES support for host registration ([#35279](https://projects.theforeman.org/issues/35279))
+* Make columns on host index page selectable ([#35274](https://projects.theforeman.org/issues/35274))
+* Add options for table preferences API ([#35212](https://projects.theforeman.org/issues/35212))
+* Ansible plugin overrides the drop-down menu on the Hostgroups page  ([#35167](https://projects.theforeman.org/issues/35167))
+* Adding a development installation guide for Foreman ([#35160](https://projects.theforeman.org/issues/35160))
+* Add installation medium for Stream 9 ([#35151](https://projects.theforeman.org/issues/35151))
+* Tests are broken after rack-test upgrade to 2.0.0+ ([#35146](https://projects.theforeman.org/issues/35146))
+* GPG key import should use https ([#35135](https://projects.theforeman.org/issues/35135))
+* Hide reports "Origin" column when table is already filtered by origin ([#35126](https://projects.theforeman.org/issues/35126))
+* Host's power status ping is limited to three seconds ([#35083](https://projects.theforeman.org/issues/35083))
+* Wrong search props with new TableIndexPage ([#35072](https://projects.theforeman.org/issues/35072))
+* ApplicationRecord.&lt;=&gt; undefined method 'name' ([#35069](https://projects.theforeman.org/issues/35069))
+* VM creation is broken with libvirt &gt;= 8.0.0 ([#35035](https://projects.theforeman.org/issues/35035))
+* Scheduled job "Create RSS notifications" does not use proxy ([#35015](https://projects.theforeman.org/issues/35015))
+* Extension to inject global http proxy into net/http requests does not set the proxy correctly ([#35014](https://projects.theforeman.org/issues/35014))
+* Overview tab - Correct card order on host detail page ([#35001](https://projects.theforeman.org/issues/35001))
+* Turn off apipie_dsl cache in production ([#34978](https://projects.theforeman.org/issues/34978))
+* Broken inline help for validator type for puppet/ansible variables ([#34971](https://projects.theforeman.org/issues/34971))
+* New host details - Move expansion carat to right side for Details tab cards ([#34961](https://projects.theforeman.org/issues/34961))
+* Ubuntu Autoinstall PXELinux template does not reference Smart Proxy correctly ([#34941](https://projects.theforeman.org/issues/34941))
+* Allow rabl 0.15.0 ([#34939](https://projects.theforeman.org/issues/34939))
+* Update grub2 chainboot templates for scsi ([#34702](https://projects.theforeman.org/issues/34702))
+* Job report template enhancements ([#34396](https://projects.theforeman.org/issues/34396))
+* air gapped kickstart are slow down by impossible subscription-manager installation ([#33565](https://projects.theforeman.org/issues/33565))
+* Update fog-google to a Ruby 3 compatible version ([#32686](https://projects.theforeman.org/issues/32686))
+* Add some extra metadata to the default kickstart ([#32612](https://projects.theforeman.org/issues/32612))
+* Users email is not mandatory on creation but it is on update ([#4007](https://projects.theforeman.org/issues/4007))
+
+#### Foreman - Audit Log
+* Audit page shows "auditable id / Host2" for "Host1" but Host2 does not exist or deleted from the all hosts ([#35132](https://projects.theforeman.org/issues/35132))
+
+#### Foreman - Compute resources - GCE
+* Pin faraday to version 1.x ([#35244](https://projects.theforeman.org/issues/35244))
+
+#### Foreman - Database
+* "ERROR:  relation "application_records" does not exist" when using models inside migrations ([#34994](https://projects.theforeman.org/issues/34994))
+* Remove updated_at from taxable_taxonomies table ([#33672](https://projects.theforeman.org/issues/33672))
+
+#### Foreman - Development tools
+* Use Ruby 2.7 for Rubocop GitHub Action ([#35179](https://projects.theforeman.org/issues/35179))
+
+#### Foreman - Facts
+* Details tab - System properties card updates ([#34901](https://projects.theforeman.org/issues/34901))
+
+#### Foreman - Host creation
+* Ubuntu 20.04.3 new installation media path ([#34942](https://projects.theforeman.org/issues/34942))
+* Ubuntu Autoinstall hostname is not set correctly before finish template execution ([#34908](https://projects.theforeman.org/issues/34908))
+* as a user, I would like to create a new host from the hostgroup page ([#9770](https://projects.theforeman.org/issues/9770))
+
+#### Foreman - Internationalization
+* Add Georgian (ka), Polish (pl) and Catalan (ca) langauges as those are having more than 40% translation rate ([#35098](https://projects.theforeman.org/issues/35098))
+* 'No matches found' text is untranslated in search bar ([#32476](https://projects.theforeman.org/issues/32476))
+
+#### Foreman - JavaScript stack
+* Failing integration tests  ([#35173](https://projects.theforeman.org/issues/35173))
+* Details tab - Add Tracer to 'System properties' card ([#35017](https://projects.theforeman.org/issues/35017))
+* Clean up MountingService ([#34881](https://projects.theforeman.org/issues/34881))
+* remove pf3 bookmarks ([#34791](https://projects.theforeman.org/issues/34791))
+
+#### Foreman - Monitoring
+* new host details Details tab - Add 'Recent communication' card ([#34981](https://projects.theforeman.org/issues/34981))
+
+#### Foreman - Notifications
+* Drop the notification for hosts without an owner ([#34948](https://projects.theforeman.org/issues/34948))
+
+#### Foreman - Organizations and Locations
+* It is possible to create taxonomies named 'Any Organization' and 'Any Location' ([#28810](https://projects.theforeman.org/issues/28810))
+
+#### Foreman - Rails
+* Setting kwarks are ambigous in validation ([#35293](https://projects.theforeman.org/issues/35293))
+* Allow symbols in YAML columns ([#35210](https://projects.theforeman.org/issues/35210))
+* Switch Rails version to 6.1 ([#34526](https://projects.theforeman.org/issues/34526))
+
+#### Foreman - Reporting
+* don't re-evaluate TemplateInputs on every loop iteration ([#34938](https://projects.theforeman.org/issues/34938))
+
+#### Foreman - Search
+* [BUG] The != and ~ search params does not work with os_minor parameter in Satellite 6.9 ([#34989](https://projects.theforeman.org/issues/34989))
+
+#### Foreman - Settings
+* Refactor config rake to use Setting DSL ([#35013](https://projects.theforeman.org/issues/35013))
+* Fix the SettingValueException error message ([#34921](https://projects.theforeman.org/issues/34921))
+* Stop creating settings in the DB ([#34305](https://projects.theforeman.org/issues/34305))
+* root_pass setting does not enforce minimum length of 8 characters as the host and hostgroups forms do ([#32925](https://projects.theforeman.org/issues/32925))
+
+#### Foreman - Smart Proxy
+* Capsule upgrade/install fails due to proxy configuration in  'HTTP(S) proxy' in settings ([#34996](https://projects.theforeman.org/issues/34996))
+
+#### Foreman - TFTP
+* Migrate discovery and bootdisk templates to Foreman
+ ([#35127](https://projects.theforeman.org/issues/35127))
+
+#### Foreman - Templates
+* host_puppet_\* template macros ignores host_param ([#35306](https://projects.theforeman.org/issues/35306))
+* SLES 15 SP4 needs changes in the provisioning templates for deployments to work correctly ([#35239](https://projects.theforeman.org/issues/35239))
+* Permit puppet settings when puppet-plugins are not loaded ([#35187](https://projects.theforeman.org/issues/35187))
+* Rocky Linux UEFI grub2 chainloading is broken ([#35182](https://projects.theforeman.org/issues/35182))
+* Expose foreman short version as a macro to be used in templates ([#35174](https://projects.theforeman.org/issues/35174))
+* Puppet enablement flags are inconsistent ([#35066](https://projects.theforeman.org/issues/35066))
+* ks= kernel parameter in Kickstart default iPXE causes RHEL9 Anaconda failure to start ([#34975](https://projects.theforeman.org/issues/34975))
+* Allow setting up rex pull during provisioning and registration ([#34969](https://projects.theforeman.org/issues/34969))
+* Ubuntu Autoinstall netplan template fails on network identifier ([#34718](https://projects.theforeman.org/issues/34718))
+* Ubuntu Autoinstall template doesn't create root user ([#34700](https://projects.theforeman.org/issues/34700))
+* Expose previous application record revision through safemode ([#32881](https://projects.theforeman.org/issues/32881))
+
+#### Foreman - Tests
+* minitest raises deprecation warnings about global use ([#35301](https://projects.theforeman.org/issues/35301))
+* Redundant mocha/setup in bmc_test.rb ([#35299](https://projects.theforeman.org/issues/35299))
+* Use assert_equal in rendered template snapshots ([#35196](https://projects.theforeman.org/issues/35196))
+* friendly_id gem version 5.4.0 contains backward-incompatible change ([#30659](https://projects.theforeman.org/issues/30659))
+
+#### Foreman - Unattended installations
+* userdata controller should be able to look up host by MAC address ([#34887](https://projects.theforeman.org/issues/34887))
+
+#### Foreman - Web Interface
+* Copy to clipboard react component should allow copy icon ([#35047](https://projects.theforeman.org/issues/35047))
+* long breadcrumb switcher is out of view ([#34998](https://projects.theforeman.org/issues/34998))
+* Models index page does 3 same API requests  ([#34987](https://projects.theforeman.org/issues/34987))
+* update screenshots in readme file ([#26853](https://projects.theforeman.org/issues/26853))
+
+#### Hammer
+* Add options for table preferences cli ([PR #603](https://github.com/theforeman/hammer-cli-foreman/pull/603)), [#35219](http://projects.theforeman.org/issues/35219)
+* I18n - extracting new, pulling from tx, [#34629](http://projects.theforeman.org/issues/34629)
+* Fix config for transifex, [#34629](http://projects.theforeman.org/issues/34629)
+
+#### Installer
+* /etc/pki/katello/certs/katello-server-ca.crt deployed with too strict permissions ([#35335](https://projects.theforeman.org/issues/35335))
+* Move puppet certs exist hook to hooks/ ([#35208](https://projects.theforeman.org/issues/35208))
+* Remove \`--disable-system-checks\` option ([#35149](https://projects.theforeman.org/issues/35149))
+* Drop umask check from Katello hooks ([#35138](https://projects.theforeman.org/issues/35138))
+* Introduce a development tuning profile ([#35134](https://projects.theforeman.org/issues/35134))
+* Remove VM overcommit hook ([#35133](https://projects.theforeman.org/issues/35133))
+* Starting or Restarting foreman.socket will raise a harmless "TCP_NODELAY failed: Operation not supported" error in Red Hat Satellite 6.9/6.10/6.11
+ ([#35089](https://projects.theforeman.org/issues/35089))
+* Drop use of pulp_client certificates ([#35005](https://projects.theforeman.org/issues/35005))
+* Drop apipie_dsl:cache generation ([#34977](https://projects.theforeman.org/issues/34977))
+* Allow configuring cockpit with multiple origins through satellite-installer
+ ([#34943](https://projects.theforeman.org/issues/34943))
+* Option --certs-regenerate is stored and thus causes certificate regeneration to happen every run ([#34875](https://projects.theforeman.org/issues/34875))
+* Missing smart-proxy-salt parameters in foreman-proxy scenario ([#31502](https://projects.theforeman.org/issues/31502))
+
+#### Installer - External modules
+* cache-enabled setting for proxy content module isn't migrated to 'true' properly ([#35157](https://projects.theforeman.org/issues/35157))
+
+#### Installer - Foreman modules
+* Insights client traffic through a Satellite 6.11 Capsule fails ([#35278](https://projects.theforeman.org/issues/35278))
+* Autoindexing on /pub is broken because apache mod_autoindex is not loaded ([#35227](https://projects.theforeman.org/issues/35227))
+
+#### Installer - foreman-installer script
+* Capsule certs regeneration fails with an error if the organization has a \`'\` in the name ([#34906](https://projects.theforeman.org/issues/34906))
+
+#### Packaging
+* Leapp upgrade requires foreman-selinux and katello-selinux to be reinstalled ([#35198](https://projects.theforeman.org/issues/35198))
+* Package foreman-maintain for Debian ([#35139](https://projects.theforeman.org/issues/35139))
+* Have a foreman-release package for Debian releases ([#35113](https://projects.theforeman.org/issues/35113))
+* satellite-change-hostname on capsule runs deprecated capsule-installer ([#34896](https://projects.theforeman.org/issues/34896))
+
+#### Packaging - Debian/Ubuntu
+* Update sinatra to 2.2.1 to match rack-protection in core ([#35258](https://projects.theforeman.org/issues/35258))
+* Remove postinst script duplication across OS packages ([#7988](https://projects.theforeman.org/issues/7988))
+
+#### Packaging - RPMs
+* Katello cron job needed to run the alternate content source refresh rake task on a schedule ([#34898](https://projects.theforeman.org/issues/34898))
+
+#### Smart Proxy - DNS
+* dns_dnscmd_main uses timeout as a global method ([#35183](https://projects.theforeman.org/issues/35183))
+
+#### Smart Proxy - PuppetCA
+* Drop puppetca_puppet_cert provider ([#35184](https://projects.theforeman.org/issues/35184))
+
+#### Smart Proxy - Tests
+* BmcTest requires ipmitool to be installed ([#35185](https://projects.theforeman.org/issues/35185))
+
+*A full list of changes in 3.4.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12][]=1599)*
 
 ### Contributors
 
