--- a/_includes/manuals/3.4/1.2_release_notes.md
+++ b/_includes/manuals/3.4/1.2_release_notes.md
@@ -27,51 +27,37 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 
 ### Release notes for 3.4.0
 #### Foreman
-* Can't assign different networks on 2+ NICs with vNIC profiles selected ([#35346](https://projects.theforeman.org/issues/35346))
 * Deprecated use of ERB.new with positional arguments ([#35298](https://projects.theforeman.org/issues/35298))
-* Ignore calico interfaces from Foreman ([#35289](https://projects.theforeman.org/issues/35289))
-* Add debugging with pry to the development setup guide    ([#35288](https://projects.theforeman.org/issues/35288))
-* Install katello-host-tools and tracer during host registration ([#35280](https://projects.theforeman.org/issues/35280))
-* SLES support for host registration ([#35279](https://projects.theforeman.org/issues/35279))
-* Make columns on host index page selectable ([#35274](https://projects.theforeman.org/issues/35274))
-* Add options for table preferences API ([#35212](https://projects.theforeman.org/issues/35212))
-* Ansible plugin overrides the drop-down menu on the Hostgroups page  ([#35167](https://projects.theforeman.org/issues/35167))
-* Adding a development installation guide for Foreman ([#35160](https://projects.theforeman.org/issues/35160))
-* Add installation medium for Stream 9 ([#35151](https://projects.theforeman.org/issues/35151))
-* Tests are broken after rack-test upgrade to 2.0.0+ ([#35146](https://projects.theforeman.org/issues/35146))
-* GPG key import should use https ([#35135](https://projects.theforeman.org/issues/35135))
-* Hide reports "Origin" column when table is already filtered by origin ([#35126](https://projects.theforeman.org/issues/35126))
-* Host's power status ping is limited to three seconds ([#35083](https://projects.theforeman.org/issues/35083))
-* Wrong search props with new TableIndexPage ([#35072](https://projects.theforeman.org/issues/35072))
-* ApplicationRecord.&lt;=&gt; undefined method 'name' ([#35069](https://projects.theforeman.org/issues/35069))
-* VM creation is broken with libvirt &gt;= 8.0.0 ([#35035](https://projects.theforeman.org/issues/35035))
-* Scheduled job "Create RSS notifications" does not use proxy ([#35015](https://projects.theforeman.org/issues/35015))
 * Extension to inject global http proxy into net/http requests does not set the proxy correctly ([#35014](https://projects.theforeman.org/issues/35014))
-* Overview tab - Correct card order on host detail page ([#35001](https://projects.theforeman.org/issues/35001))
 * Turn off apipie_dsl cache in production ([#34978](https://projects.theforeman.org/issues/34978))
 * Broken inline help for validator type for puppet/ansible variables ([#34971](https://projects.theforeman.org/issues/34971))
-* New host details - Move expansion carat to right side for Details tab cards ([#34961](https://projects.theforeman.org/issues/34961))
-* Ubuntu Autoinstall PXELinux template does not reference Smart Proxy correctly ([#34941](https://projects.theforeman.org/issues/34941))
-* Allow rabl 0.15.0 ([#34939](https://projects.theforeman.org/issues/34939))
-* Update grub2 chainboot templates for scsi ([#34702](https://projects.theforeman.org/issues/34702))
-* Job report template enhancements ([#34396](https://projects.theforeman.org/issues/34396))
-* air gapped kickstart are slow down by impossible subscription-manager installation ([#33565](https://projects.theforeman.org/issues/33565))
-* Update fog-google to a Ruby 3 compatible version ([#32686](https://projects.theforeman.org/issues/32686))
-* Add some extra metadata to the default kickstart ([#32612](https://projects.theforeman.org/issues/32612))
-* Users email is not mandatory on creation but it is on update ([#4007](https://projects.theforeman.org/issues/4007))
+
+#### Foreman - API
+* Add options for table preferences to the API ([#35212](https://projects.theforeman.org/issues/35212))
 
 #### Foreman - Audit Log
 * Audit page shows "auditable id / Host2" for "Host1" but Host2 does not exist or deleted from the all hosts ([#35132](https://projects.theforeman.org/issues/35132))
 
+#### Foreman - Compute resources
+* Can't assign different networks on 2+ NICs with vNIC profiles selected ([#35346](https://projects.theforeman.org/issues/35346))
+* Allow newer net-ssh version ([#35264](https://projects.theforeman.org/issues/35264))
+
 #### Foreman - Compute resources - GCE
 * Pin faraday to version 1.x ([#35244](https://projects.theforeman.org/issues/35244))
+* Update fog-google to a Ruby 3 compatible version ([#32686](https://projects.theforeman.org/issues/32686))
+
+#### Foreman - Compute resources - libvirt
+* VM creation is broken with libvirt &gt;= 8.0.0 due to VNC password length ([#35035](https://projects.theforeman.org/issues/35035))
 
 #### Foreman - Database
 * "ERROR:  relation "application_records" does not exist" when using models inside migrations ([#34994](https://projects.theforeman.org/issues/34994))
 * Remove updated_at from taxable_taxonomies table ([#33672](https://projects.theforeman.org/issues/33672))
 
 #### Foreman - Development tools
+* Add debugging with pry to the development setup guide ([#35288](https://projects.theforeman.org/issues/35288))
 * Use Ruby 2.7 for Rubocop GitHub Action ([#35179](https://projects.theforeman.org/issues/35179))
+* Adding a development installation guide for Foreman ([#35160](https://projects.theforeman.org/issues/35160))
+* Tests are broken after rack-test upgrade to 2.0.0+ ([#35146](https://projects.theforeman.org/issues/35146))
 
 #### Foreman - Facts
 * Details tab - System properties card updates ([#34901](https://projects.theforeman.org/issues/34901))
@@ -81,12 +67,25 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 * Ubuntu Autoinstall hostname is not set correctly before finish template execution ([#34908](https://projects.theforeman.org/issues/34908))
 * as a user, I would like to create a new host from the hostgroup page ([#9770](https://projects.theforeman.org/issues/9770))
 
+#### Foreman - Host groups
+* Ansible plugin overrides the drop-down menu on the Hostgroups page  ([#35167](https://projects.theforeman.org/issues/35167))
+
+#### Foreman - Host registration
+* Install katello-host-tools and tracer during host registration ([#35280](https://projects.theforeman.org/issues/35280))
+* SLES support for host registration ([#35279](https://projects.theforeman.org/issues/35279))
+
 #### Foreman - Internationalization
 * Add Georgian (ka), Polish (pl) and Catalan (ca) langauges as those are having more than 40% translation rate ([#35098](https://projects.theforeman.org/issues/35098))
 * 'No matches found' text is untranslated in search bar ([#32476](https://projects.theforeman.org/issues/32476))
 
+#### Foreman - Inventory
+* Make columns on host index page selectable ([#35274](https://projects.theforeman.org/issues/35274))
+* Hide reports "Origin" column when table is already filtered by origin ([#35126](https://projects.theforeman.org/issues/35126))
+* Host's power status ping is limited to three seconds ([#35083](https://projects.theforeman.org/issues/35083))
+
 #### Foreman - JavaScript stack
 * Failing integration tests  ([#35173](https://projects.theforeman.org/issues/35173))
+* Wrong search props with new TableIndexPage ([#35072](https://projects.theforeman.org/issues/35072))
 * Details tab - Add Tracer to 'System properties' card ([#35017](https://projects.theforeman.org/issues/35017))
 * Clean up MountingService ([#34881](https://projects.theforeman.org/issues/34881))
 * remove pf3 bookmarks ([#34791](https://projects.theforeman.org/issues/34791))
@@ -95,15 +94,19 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 * new host details Details tab - Add 'Recent communication' card ([#34981](https://projects.theforeman.org/issues/34981))
 
 #### Foreman - Notifications
+* Scheduled job "Create RSS notifications" does not use proxy ([#35015](https://projects.theforeman.org/issues/35015))
 * Drop the notification for hosts without an owner ([#34948](https://projects.theforeman.org/issues/34948))
 
 #### Foreman - Organizations and Locations
 * It is possible to create taxonomies named 'Any Organization' and 'Any Location' ([#28810](https://projects.theforeman.org/issues/28810))
 
 #### Foreman - Rails
-* Setting kwarks are ambigous in validation ([#35293](https://projects.theforeman.org/issues/35293))
+* Setting kwargs are ambigous in validation ([#35293](https://projects.theforeman.org/issues/35293))
 * Allow symbols in YAML columns ([#35210](https://projects.theforeman.org/issues/35210))
+* ApplicationRecord.&lt;=&gt; undefined method 'name' ([#35069](https://projects.theforeman.org/issues/35069))
+* Allow rabl 0.15.0 ([#34939](https://projects.theforeman.org/issues/34939))
 * Switch Rails version to 6.1 ([#34526](https://projects.theforeman.org/issues/34526))
+* Remove usage of Class level methods scope inheritance ([#29483](https://projects.theforeman.org/issues/29483))
 
 #### Foreman - Reporting
 * don't re-evaluate TemplateInputs on every loop iteration ([#34938](https://projects.theforeman.org/issues/34938))
@@ -112,13 +115,14 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 * [BUG] The != and ~ search params does not work with os_minor parameter in Satellite 6.9 ([#34989](https://projects.theforeman.org/issues/34989))
 
 #### Foreman - Settings
+* Ignore calico interfaces from Foreman ([#35289](https://projects.theforeman.org/issues/35289))
 * Refactor config rake to use Setting DSL ([#35013](https://projects.theforeman.org/issues/35013))
 * Fix the SettingValueException error message ([#34921](https://projects.theforeman.org/issues/34921))
 * Stop creating settings in the DB ([#34305](https://projects.theforeman.org/issues/34305))
 * root_pass setting does not enforce minimum length of 8 characters as the host and hostgroups forms do ([#32925](https://projects.theforeman.org/issues/32925))
 
 #### Foreman - Smart Proxy
-* Capsule upgrade/install fails due to proxy configuration in  'HTTP(S) proxy' in settings ([#34996](https://projects.theforeman.org/issues/34996))
+* Smart Proxy upgrade/install fails due to proxy configuration in  'HTTP(S) proxy' in settings ([#34996](https://projects.theforeman.org/issues/34996))
 
 #### Foreman - TFTP
 * Migrate discovery and bootdisk templates to Foreman
@@ -133,23 +137,36 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 * Puppet enablement flags are inconsistent ([#35066](https://projects.theforeman.org/issues/35066))
 * ks= kernel parameter in Kickstart default iPXE causes RHEL9 Anaconda failure to start ([#34975](https://projects.theforeman.org/issues/34975))
 * Allow setting up rex pull during provisioning and registration ([#34969](https://projects.theforeman.org/issues/34969))
+* Ubuntu Autoinstall PXELinux template does not reference Smart Proxy correctly ([#34941](https://projects.theforeman.org/issues/34941))
 * Ubuntu Autoinstall netplan template fails on network identifier ([#34718](https://projects.theforeman.org/issues/34718))
+* Update grub2 chainboot templates for scsi ([#34702](https://projects.theforeman.org/issues/34702))
 * Ubuntu Autoinstall template doesn't create root user ([#34700](https://projects.theforeman.org/issues/34700))
+* Job report template enhancements ([#34396](https://projects.theforeman.org/issues/34396))
+* air gapped kickstart are slow down by impossible subscription-manager installation ([#33565](https://projects.theforeman.org/issues/33565))
 * Expose previous application record revision through safemode ([#32881](https://projects.theforeman.org/issues/32881))
+* Add some extra metadata to the default kickstart ([#32612](https://projects.theforeman.org/issues/32612))
 
 #### Foreman - Tests
+* Update show_me_the_cookies to 6.x ([#35371](https://projects.theforeman.org/issues/35371))
 * minitest raises deprecation warnings about global use ([#35301](https://projects.theforeman.org/issues/35301))
 * Redundant mocha/setup in bmc_test.rb ([#35299](https://projects.theforeman.org/issues/35299))
 * Use assert_equal in rendered template snapshots ([#35196](https://projects.theforeman.org/issues/35196))
 * friendly_id gem version 5.4.0 contains backward-incompatible change ([#30659](https://projects.theforeman.org/issues/30659))
 
 #### Foreman - Unattended installations
+* Add installation medium for Stream 9 ([#35151](https://projects.theforeman.org/issues/35151))
+* GPG key import should use https ([#35135](https://projects.theforeman.org/issues/35135))
 * userdata controller should be able to look up host by MAC address ([#34887](https://projects.theforeman.org/issues/34887))
+
+#### Foreman - Users, Roles and Permissions
+* Users email is not mandatory on creation but it is on update ([#4007](https://projects.theforeman.org/issues/4007))
 
 #### Foreman - Web Interface
 * Copy to clipboard react component should allow copy icon ([#35047](https://projects.theforeman.org/issues/35047))
+* Overview tab - Correct card order on host detail page ([#35001](https://projects.theforeman.org/issues/35001))
 * long breadcrumb switcher is out of view ([#34998](https://projects.theforeman.org/issues/34998))
 * Models index page does 3 same API requests  ([#34987](https://projects.theforeman.org/issues/34987))
+* New host details - Move expansion carat to right side for Details tab cards ([#34961](https://projects.theforeman.org/issues/34961))
 * update screenshots in readme file ([#26853](https://projects.theforeman.org/issues/26853))
 
 #### Hammer
@@ -168,8 +185,6 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
  ([#35089](https://projects.theforeman.org/issues/35089))
 * Drop use of pulp_client certificates ([#35005](https://projects.theforeman.org/issues/35005))
 * Drop apipie_dsl:cache generation ([#34977](https://projects.theforeman.org/issues/34977))
-* Allow configuring cockpit with multiple origins through satellite-installer
- ([#34943](https://projects.theforeman.org/issues/34943))
 * Option --certs-regenerate is stored and thus causes certificate regeneration to happen every run ([#34875](https://projects.theforeman.org/issues/34875))
 * Missing smart-proxy-salt parameters in foreman-proxy scenario ([#31502](https://projects.theforeman.org/issues/31502))
 
@@ -177,6 +192,7 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 * cache-enabled setting for proxy content module isn't migrated to 'true' properly ([#35157](https://projects.theforeman.org/issues/35157))
 
 #### Installer - Foreman modules
+* Allow configuring cockpit with multiple origins through satellite-installer ([#34943](https://projects.theforeman.org/issues/34943))
 * Insights client traffic through a Satellite 6.11 Capsule fails ([#35278](https://projects.theforeman.org/issues/35278))
 * Autoindexing on /pub is broken because apache mod_autoindex is not loaded ([#35227](https://projects.theforeman.org/issues/35227))
 
@@ -190,6 +206,7 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 * satellite-change-hostname on capsule runs deprecated capsule-installer ([#34896](https://projects.theforeman.org/issues/34896))
 
 #### Packaging - Debian/Ubuntu
+* Have the foreman-release.deb rpm symlinked to latest version ([#35349](https://projects.theforeman.org/issues/35349))
 * Update sinatra to 2.2.1 to match rack-protection in core ([#35258](https://projects.theforeman.org/issues/35258))
 * Remove postinst script duplication across OS packages ([#7988](https://projects.theforeman.org/issues/7988))
 
@@ -197,6 +214,7 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 * Katello cron job needed to run the alternate content source refresh rake task on a schedule ([#34898](https://projects.theforeman.org/issues/34898))
 
 #### Smart Proxy - DNS
+* dns_dnscmd is missing a require 'timeout' statement ([#35384](https://projects.theforeman.org/issues/35384))
 * dns_dnscmd_main uses timeout as a global method ([#35183](https://projects.theforeman.org/issues/35183))
 
 #### Smart Proxy - PuppetCA
