--- a/_includes/manuals/3.4/1.2_release_notes.md
+++ b/_includes/manuals/3.4/1.2_release_notes.md
@@ -63,12 +63,13 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 * Details tab - System properties card updates ([#34901](https://projects.theforeman.org/issues/34901))
 
 #### Foreman - Host creation
+* Bulk rebuild hosts can not reset the build token ([#35203](https://projects.theforeman.org/issues/35203))
 * Ubuntu 20.04.3 new installation media path ([#34942](https://projects.theforeman.org/issues/34942))
 * Ubuntu Autoinstall hostname is not set correctly before finish template execution ([#34908](https://projects.theforeman.org/issues/34908))
 * as a user, I would like to create a new host from the hostgroup page ([#9770](https://projects.theforeman.org/issues/9770))
 
 #### Foreman - Host groups
-* Ansible plugin overrides the drop-down menu on the Hostgroups page  ([#35167](https://projects.theforeman.org/issues/35167))
+* Move hostgroups dropdown actions to an extendable helper ([#35167](https://projects.theforeman.org/issues/35167))
 
 #### Foreman - Host registration
 * Install katello-host-tools and tracer during host registration ([#35280](https://projects.theforeman.org/issues/35280))
@@ -108,6 +109,9 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 * Switch Rails version to 6.1 ([#34526](https://projects.theforeman.org/issues/34526))
 * Remove usage of Class level methods scope inheritance ([#29483](https://projects.theforeman.org/issues/29483))
 
+#### Foreman - Rake tasks
+* \`foreman-rake permissions:reset\` should show a warning that it's required to manually update the password in 'foreman.yml' ([#31966](https://projects.theforeman.org/issues/31966))
+
 #### Foreman - Reporting
 * don't re-evaluate TemplateInputs on every loop iteration ([#34938](https://projects.theforeman.org/issues/34938))
 
@@ -129,6 +133,7 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
  ([#35127](https://projects.theforeman.org/issues/35127))
 
 #### Foreman - Templates
+* Restart yggdrasil from kptm if it is already running ([#35472](https://projects.theforeman.org/issues/35472))
 * host_puppet_\* template macros ignores host_param ([#35306](https://projects.theforeman.org/issues/35306))
 * SLES 15 SP4 needs changes in the provisioning templates for deployments to work correctly ([#35239](https://projects.theforeman.org/issues/35239))
 * Permit puppet settings when puppet-plugins are not loaded ([#35187](https://projects.theforeman.org/issues/35187))
@@ -162,6 +167,7 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 * Users email is not mandatory on creation but it is on update ([#4007](https://projects.theforeman.org/issues/4007))
 
 #### Foreman - Web Interface
+* Make columns on host index page selectable ([#35361](https://projects.theforeman.org/issues/35361))
 * Copy to clipboard react component should allow copy icon ([#35047](https://projects.theforeman.org/issues/35047))
 * Overview tab - Correct card order on host detail page ([#35001](https://projects.theforeman.org/issues/35001))
 * long breadcrumb switcher is out of view ([#34998](https://projects.theforeman.org/issues/34998))
@@ -175,6 +181,7 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 * Fix config for transifex, [#34629](http://projects.theforeman.org/issues/34629)
 
 #### Installer
+* Drop host reports plugin ([#35440](https://projects.theforeman.org/issues/35440))
 * /etc/pki/katello/certs/katello-server-ca.crt deployed with too strict permissions ([#35335](https://projects.theforeman.org/issues/35335))
 * Move puppet certs exist hook to hooks/ ([#35208](https://projects.theforeman.org/issues/35208))
 * Remove \`--disable-system-checks\` option ([#35149](https://projects.theforeman.org/issues/35149))
@@ -192,14 +199,15 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 * cache-enabled setting for proxy content module isn't migrated to 'true' properly ([#35157](https://projects.theforeman.org/issues/35157))
 
 #### Installer - Foreman modules
-* Allow configuring cockpit with multiple origins through satellite-installer ([#34943](https://projects.theforeman.org/issues/34943))
 * Insights client traffic through a Satellite 6.11 Capsule fails ([#35278](https://projects.theforeman.org/issues/35278))
 * Autoindexing on /pub is broken because apache mod_autoindex is not loaded ([#35227](https://projects.theforeman.org/issues/35227))
+* Allow configuring cockpit with multiple origins through satellite-installer ([#34943](https://projects.theforeman.org/issues/34943))
 
 #### Installer - foreman-installer script
 * Capsule certs regeneration fails with an error if the organization has a \`'\` in the name ([#34906](https://projects.theforeman.org/issues/34906))
 
 #### Packaging
+* Sendmail package not present on RHEL8 and needs manual configuration ([#35461](https://projects.theforeman.org/issues/35461))
 * Leapp upgrade requires foreman-selinux and katello-selinux to be reinstalled ([#35198](https://projects.theforeman.org/issues/35198))
 * Package foreman-maintain for Debian ([#35139](https://projects.theforeman.org/issues/35139))
 * Have a foreman-release package for Debian releases ([#35113](https://projects.theforeman.org/issues/35113))
