Add committers of Foreman 3.4.0

--- a/_includes/manuals/3.4/1.2_release_notes.md
+++ b/_includes/manuals/3.4/1.2_release_notes.md
@@ -237,6 +237,6 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
 
-<!-- update scripts/committers.rb with the correct versions and dates and fill this in -->
+Adam Ruzicka, Amit Upadhye, Andrew Teixeira, Antoine Beaupré, Bastian Schmidt, Bernhard Suttner, Chris Roberts, Dirk Götz, Eric D. Helms, Evgeni Golov, Ewoud Kohl van Wijngaarden, Garret Rumohr, Gordon Bleux, Jeremy Lenz, John Mitsch, Jonathon Turel, Justin Sherrill, Kenyon Ralph, Leos Stejskal, Lucy Fu, Lukáš Zapletal, Marek Hulán, Maria Agaphontzev, Markus Bucher, Matěj Mudra, Melanie Corr, Oleh Fedorenko, Ondrej Ezr, Ondřej Ezr, Ondřej Pražák, Pat Riehecky, Patrick Creech, Rahul Bajaj, Robert Frank, Romuald Conty, Ron Lavi, Shim Shtein, Shimon Shtein, Shira Maximov, Tilman Kranz, Tim Meusel, Tomer Brisker, William Clark, Yifat Makias, dependabot[bot], naveen, nofar, nofaralfasi, pandrieux, pheeeter, tux93
 
 As well as all users who helped test releases, report bugs and provide feedback on the project.
